--- a/deno.jsonc
+++ b/deno.jsonc
@@ -17,6 +17,7 @@
       ]
     }
   },
+  // TODO: ensure we use version specifiers in each import
   "imports": {
     // Deno standard library
     "@std/assert": "jsr:@std/assert@^1",
@@ -24,13 +25,16 @@
     "@std/path": "jsr:@std/path@^1",
     "@std/yaml": "jsr:@std/yaml@^1",
     "@std/fmt/colors": "jsr:@std/fmt@1/colors",
+
     // typical
     "@zod": "jsr:@zod/zod@4",
     "json5": "npm:json5@^2",
+
     // cliffy
     "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.8",
     "@cliffy/completions": "jsr:@cliffy/command@1.0.0-rc.8/completions",
     "@cliffy/help": "jsr:@cliffy/command@1.0.0-rc.8/help",
+
     // Markdown / HTML pipeline
     "unified": "npm:unified",
     "remark": "npm:remark@^15",
@@ -43,6 +47,7 @@
     "rehype-slug": "npm:rehype-slug",
     "rehype-autolink-headings": "npm:rehype-autolink-headings",
     "vfile": "npm:vfile",
+
     // AST utils
     "types/mdast": "npm:@types/mdast@^4",
     "types/unist": "npm:@types/unist",
