--- a/deno.jsonc
+++ b/deno.jsonc
@@ -22,10 +22,15 @@
   "imports": {
     // Deno standard library
     "@std/assert": "jsr:@std/assert@^1",
+    "@std/assert/equals": "jsr:@std/assert@^1/equals",
+    "@std/async@1/debounce": "jsr:@std/async@1/debounce",
     "@std/fs": "jsr:@std/fs@^1",
     "@std/path": "jsr:@std/path@^1",
+    "@std/path/basename": "jsr:@std/path@^1/basename",
     "@std/yaml": "jsr:@std/yaml@^1",
     "@std/fmt/colors": "jsr:@std/fmt@1/colors",
+    "@std/fmt@1/colors": "jsr:@std/fmt@1/colors",
+    "@std/fmt@^1/colors": "jsr:@std/fmt@^1/colors",
 
     // typical
     "@zod/zod": "jsr:@zod/zod@4",
@@ -34,6 +39,8 @@
 
     // cliffy
     "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.8",
+    "@cliffy/command/completions": "jsr:@cliffy/command@1.0.0-rc.8/completions",
+    "@cliffy/command/help": "jsr:@cliffy/command@1.0.0-rc.8/help",
     "@cliffy/completions": "jsr:@cliffy/command@1.0.0-rc.8/completions",
     "@cliffy/help": "jsr:@cliffy/command@1.0.0-rc.8/help",
 
